tidy up low-hanging code issues